[*] css for pre

--- a/bltoolkit.html
+++ b/bltoolkit.html
@@ -291,6 +291,9 @@ img {
 </style>
 </head>
 <body>
+<p><style type="text/css">
+	pre { border: 0;}
+</style></p>
 <h1>Business Logic Toolkit</h1>
 <p>Основная задача статьи дать вводную информацию о библиотеке BLToolkit. Она поможет Вам сделать первый шаг в обуздании этого маленького монстра. Данная статья основана на оригинальной статье <a href="http://rsdn.ru/article/files/libs/RsdnFrameworkData.xml">Игоря Ткачева &quot;Пространство имен Rsdn.Framework.Data&quot;</a> и, как следствие, содержит части оной.</p>
 <h2>От <a href="https://bitbucket.org/liiws">liiws</a></h2>
