[+] link to bltoolkit site

--- a/bltoolkit.html
+++ b/bltoolkit.html
@@ -296,6 +296,7 @@ img {
 </style></p>
 <h1>Business Logic Toolkit</h1>
 <p>Основная задача статьи дать вводную информацию о библиотеке BLToolkit. Она поможет Вам сделать первый шаг в обуздании этого маленького монстра. Данная статья основана на оригинальной статье <a href="http://rsdn.ru/article/files/libs/RsdnFrameworkData.xml">Игоря Ткачева &quot;Пространство имен Rsdn.Framework.Data&quot;</a> и, как следствие, содержит части оной.</p>
+<p><a href="http://bltoolkit.net/Home.ashx">Оф. сайт BLToolkit</a>.</p>
 <h2>От <a href="https://bitbucket.org/liiws">liiws</a></h2>
 <p>Настоящая копипаста создана с целью сохранения оригинального текста, т.к. страница на <a href="http://projects.rsdn.ru/RFD/wiki/BLToolkit">RSDN</a> умерла.</p>
 <h2>Оглавление</h2>
