[*] moved to github

--- a/bltoolkit.html
+++ b/bltoolkit.html
@@ -297,7 +297,7 @@ img {
 <h1>Business Logic Toolkit</h1>
 <p>Основная задача статьи дать вводную информацию о библиотеке BLToolkit. Она поможет Вам сделать первый шаг в обуздании этого маленького монстра. Данная статья основана на оригинальной статье <a href="http://rsdn.ru/article/files/libs/RsdnFrameworkData.xml">Игоря Ткачева &quot;Пространство имен Rsdn.Framework.Data&quot;</a> и, как следствие, содержит части оной.</p>
 <p><a href="http://bltoolkit.net/Home.ashx">Оф. сайт BLToolkit</a>.</p>
-<h2>От <a href="https://bitbucket.org/liiws">liiws</a></h2>
+<h2>От <a href="https://github.com/liiws">liiws</a></h2>
 <p>Настоящая копипаста создана с целью сохранения оригинального текста, т.к. страница на <a href="http://projects.rsdn.ru/RFD/wiki/BLToolkit">RSDN</a> умерла.</p>
 <h2>Оглавление</h2>
 <ul>
@@ -2732,7 +2732,7 @@ destMapper.SetInt64(destObj,dstIndex,Converter.ConvertInt32ToInt64(srcMapper.Get
 <li>Подсветка синтаксиса <a href="http://hilite.me/">http://hilite.me/</a>.</li>
 <li>Кэш из вебархива (<a href="http://web.archive.org/web/20131106072643/http://projects.rsdn.ru/RFD/wiki/BLToolkit">http://web.archive.org/web/20131106072643/http://projects.rsdn.ru/RFD/wiki/BLToolkit</a>) оригинальной страницы <a href="http://projects.rsdn.ru/RFD/wiki/BLToolkit">http://projects.rsdn.ru/RFD/wiki/BLToolkit</a>.</li>
 <li>Оригинальная документация <a href="http://files.rsdn.ru/49168/BLToolkit.doc">http://files.rsdn.ru/49168/BLToolkit.doc</a>.</li>
-<li>Исходник этой статьи на markdown - <a href="http://liiws.bitbucket.org/bltoolkit.md">http://liiws.bitbucket.org/bltoolkit.md</a>.</li>
+<li>Исходник этой статьи на markdown - <a href="https://raw.githubusercontent.com/liiws/BLToolkitDocs/master/bltoolkit.md">https://raw.githubusercontent.com/liiws/BLToolkitDocs/master/bltoolkit.md</a>.</li>
 </ul>
 
 </body>
