--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ img {
 </style>
 </head>
 <body>
-<h1>Содержание <a href="http://liiws.bitbucket.org/">liiws.bitbucket.org</a></h1>
+<h1>Содержание <a href="https://github.com/liiws/BLToolkitDocs">BLToolkitDocs</a></h1>
 <h2>Business Logic Toolkit</h2>
 <p><a href="http://bltoolkit.net/">BLToolkit</a> - высокоуровневая обёртка над ADO.NET (есть поддержка и других БД) для построения высокопроизводительных приложений.</p>
 <ul>
